# tmp-kedro-mlflow-example

./: README.md  note.md  pyproject.toml  requirements.txt
mlruns/0/: meta.yaml
mlruns/199585527653966136/: meta.yaml
mlruns/199585527653966136/3df6e6598f9d4600b7568b0fafc9fb62/: meta.yaml
mlruns/199585527653966136/3df6e6598f9d4600b7568b0fafc9fb62/tags/: mlflow.source.name  project_path  runner  session_id
src/kedro_mlflow_example/: __init__.py  __main__.py  settings.py
